2004-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Add this
	* no.po: and this

2004-08-16  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: New file, from gettext-0.14.1.
	* boldquot.sed: New file, from gettext-0.14.1.
	* en@boldquot.header: New file, from gettext-0.14.1.
	* en@quot.header: New file, from gettext-0.14.1.
	* insert-header.sin: New file, from gettext-0.14.1.
	* quot.sed: New file, from gettext-0.14.1.
	* remove-potcdate.sin: New file, from gettext-0.14.1.
	* Rules-quot: New file, from gettext-0.14.1.
